embed realtime route

--- a/views/index_template.html
+++ b/views/index_template.html
@@ -137,7 +137,7 @@
 	<div class="tab-pane fade" id="vis_1">
 	  <h3>Fatality heatmap of militarized inter-state disputes 1816-2001</h3>
 	   Source: Correlates of War <a href="http://www.correlatesofwar.org/COW2%20Data/MIDLOC/MIDLOC_v1.1.html">MIDLOC v1.1 </a> and <a href="http://www.correlatesofwar.org/COW2%20Data/MIDs/MID310.html">MID v3.10</a>
-	  <p><iframe style="border: 0px;" src="/viz1" height=550 width=900 scrolling="yes"></iframe></p>
+	  <p><iframe style="border: 0px;" src="/realtime" height=1000 width=1000 scrolling="yes"></iframe></p>
 	  <div class="panel panel-primary">
 	    <div class="panel-heading">
 	      <h3 class="panel-title">About Visual #1</h3>
