--- a/views/index_template.html
+++ b/views/index_template.html
@@ -115,10 +115,9 @@
 
 	<div class="tab-pane fade" id="good_vis">
 	  
-	  <br>See also: <a href="http://www.gapminder.org/world/#$majorMode=map$is;shi=t;ly=2003;lb=f;il=t;fs=11;al=30;stl=f;st=f;nsl=t;se=t$wst;tts=C$ts;sp=5.59290322580644;ti=2012$zpv;v=0$inc_x;mmid=XCOORDS;iid=phAwcNAVuyj1jiMAkmq1iMg;by=const$inc_y;mmid=YCOORDS;iid=phAwcNAVuyj2tPLxKvvnNPA;by=const$inc_s;uniValue=8.21;iid=phAwcNAVuyj1jiMAkmq1iMg;by=ind$inc_c;uniValue=255;gid=CATID0;by=grp$map_s;sma=49;smi=8.2$cd;bd=0$inds=" target="_blank">Gapminder's Wealth and Health Of Nations</a> and <a href="http://bost.ocks.org/mike/nations/" target="_blank">Mike Bostock's Recreation in D3</a><br><hr></br>
-	  <a href="http://mbostock.github.io/d3/talk/20111116/airports.html">Mike Bostock's Airport Example, showing Voronoi overlay</a>
+      <br>Source: <a href="http://ramblings.mcpher.com/Home/excelquirks/gassites/d3nodefocus">Blog post on xLiberation</a>
 	  <iframe style="border: 0px;" src="http://mbostock.github.io/d3/talk/20111116/airports.html" height=900 width=1200 scrolling="yes"></iframe>
-
+      
 	  <div class="panel panel-success">
 	    <div class="panel-heading">
 	      <h3 class="panel-title">Why these are good visuals</h3>
