--- a/views/index_template.html
+++ b/views/index_template.html
@@ -116,8 +116,7 @@
 	<div class="tab-pane fade" id="good_vis">
 	  
       <br>Source: <a href="http://ramblings.mcpher.com/Home/excelquirks/gassites/d3nodefocus">Blog post on xLiberation</a>
-	  <iframe style="border: 0px;" src="http://mbostock.github.io/d3/talk/20111116/airports.html" height=900 width=1200 scrolling="yes"></iframe>
-      
+     <iframe title="force directed node focus for this site" width="100%" height="900" scrolling="auto" frameborder="0" id="2091775485" name="2091775485" allowtransparency="true" class="igm" src="//mj89sp3sau2k7lj1eg3k40hkeppguj6j-a-sites-opensocial.googleusercontent.com/gadgets/ifr?url=http://www.gstatic.com/sites-gadgets/iframe/iframe.xml&amp;container=enterprise&amp;view=default&amp;lang=en&amp;country=ALL&amp;sanitize=0&amp;v=4c7b07266c88c5b4&amp;libs=core:dynamic-height&amp;mid=204&amp;parent=http://ramblings.mcpher.com/Home/excelquirks/gassites/d3nodefocus#up_scroll=auto&amp;up_iframeURL=http://xliberation.com/googlecharts/d3nodefocustagsite.html&amp;st=e%3DAIHE3cBjahSnDfIa%252B0i0x%252F1JAepL4zfmh%252Bv%252B31azqPt452RDQUdthL5gT1WsRVzOe1%252Bd5UE9Yuzd5NKSQr5QP1s1WuQVTTx2pZSpTd5CCQlAx9PoA0Km1zfx0oRt7wcQIGkNmtiAEox3%26c%3Denterprise&amp;rpctoken=-3205715576345604868"></iframe> 
 	  <div class="panel panel-success">
 	    <div class="panel-heading">
 	      <h3 class="panel-title">Why these are good visuals</h3>
