--- a/views/index_template.html
+++ b/views/index_template.html
@@ -97,9 +97,8 @@
 
 	<div class="tab-pane fade" id="bad_vis">
 
-	  <a href="http://www.stratasan.com/bad-maps-apples-map-app-and-poor-cartographic-design/">From Stratasan blog post</a><br><br>
+	  <a href="http://hashtagify.me/#grizzlies">Hashtagify</a><br><br>
 
-	  <img src="img/BadMap_Capitals.jpg" width=900><br><br>
 
 	  <div class="panel panel-danger">
 	    <div class="panel-heading">
@@ -143,8 +142,9 @@
 	    <div class="panel-body">
 	      <h4>Data</h4>
           <p>Github API. Events. Real time.</p>
-          <h4>Visualizing stars</h4>
-          <p>What are we looking at.</p>
+          <h4>Horizon Chart</h4>
+          <p><img src="/img/horizon.png"/>What are we looking at.</p>
+          <p><a href="http://vis.berkeley.edu/papers/horizon/">Paper about horizon chart</a></p>
           <h4>Conclusions</h4>
           <p>Exploratory and fun.</p>
           <h4>How Created</h4>
