--- a/views/force_starred_repos.html
+++ b/views/force_starred_repos.html
@@ -71,7 +71,7 @@ var force = d3.layout.force()
     .charge(-500)
     .size([width, height]);
 
-d3.json("force_owned_language_personal.json", function(json) {
+d3.json("force_starred_repos.json", function(json) {
   force
       .nodes(json.nodes)
       .links(json.links)
