--- a/views/cubeism_template.html
+++ b/views/cubeism_template.html
@@ -111,13 +111,25 @@ header {
 <script>
 
 var context = cubism.context()
-   .step(6e4)
+   .step(5 * 60 * 1000)
    .size(1000);
 
 var cube = context.cube("http://23.239.1.42:1081");
 
+
+var moving_average = function(now, window_size){
+    var sum = now.shift(-window_size * 5 * 60 * 1000);
+    for (var i=window_size-1; i>0; i--){
+        sum = sum.add(now.shift(-i * 5 * 60 * 1000));
+    }
+    return sum.divide(window_size);
+}
+
 var horizon = context.horizon()
-        .metric(function(d) {return cube.metric("sum(match.eq(language, '" + d + "'))"); });
+        .metric(function(d) {
+                //return cube.metric("sum(match.eq(language, '" + d + "'))");
+                return moving_average( cube.metric("sum(match.eq(language, '" + d + "'))"),24)
+            });
 
 var metrics = [
     'Java',
@@ -134,16 +146,20 @@ var metrics = [
     'PHP',
     'Perl',
     'C#',
+    'CoffeeScript',
     'Erlang',
     'Elixir',
     'R',
     'Julia',
     'Rust',
     'Objective-J',
-    'CoffeeScript',
     'TypeScript',
     'GorillaScript',
-    'D'
+    'D',
+    'Matlab',
+    'Scheme',
+    'OCaml',
+    'Mathematica'
 ]
 /*
 var metrics = [
