final visual parameters, add img

--- a/views/cubeism_template.html
+++ b/views/cubeism_template.html
@@ -159,7 +159,8 @@ var metrics = [
     'Matlab',
     'Scheme',
     'OCaml',
-    'Mathematica'
+    'Mathematica',
+    'LiveScript'
 ]
 /*
 var metrics = [
