--- a/views/force_owned_language_personal.html
+++ b/views/force_owned_language_personal.html
@@ -17,7 +17,7 @@
 
     .tooltip {
         position: absolute;
-        width: 200px;
+        width: auto;
         height: auto;
         padding: 10px;
         background-color: gray;
@@ -47,12 +47,12 @@
     <div id="chart"></div>
     <div id="tooltip" class="hidden tooltip">
         <p id="title"><strong>Important Label Heading</strong></p>
-        <p><span id="value">100</span></p>
     </div>
     <div id="tooltip_user" class="tooltip hidden">
         <p id="title"><strong>User Name here</strong></p>
         <p><span id="img"></span></p>
         <p><span id="location"></span></p>
+        <p><span id="bio"></span></p>
 
     </div>
 <script>
@@ -137,6 +137,9 @@ d3.json("force_owned_language_personal.json", function(json) {
             d3.select("#location")
                 .text(d.location);
 
+            d3.select("#bio")
+                .text(d.bio);
+
         d3.select("#tooltip_user")
         .classed("hidden", false);
 
@@ -145,8 +148,8 @@ d3.json("force_owned_language_personal.json", function(json) {
         d3.select("#tooltip")
         .style("left", xPosition + "px")
         .style("top", yPosition + "px")
-        .select("#value")
-        .text(d.id);
+        .select("#title")
+        .html("<strong>" + d.id + "</strong>");
 
         //Show the tooltip
         d3.select("#tooltip").classed("hidden", false);
