--- a/views/force_starred_language.html
+++ b/views/force_starred_language.html
@@ -17,7 +17,7 @@
 
     .tooltip {
         position: absolute;
-        width: 200px;
+        width: auto;
         height: auto;
         padding: 10px;
         background-color: gray;
@@ -47,14 +47,21 @@
     <div id="chart"></div>
     <div id="tooltip" class="hidden tooltip">
         <p id="title"><strong>Important Label Heading</strong></p>
-        <p><span id="value">100</span></p>
     </div>
     <div id="tooltip_user" class="tooltip hidden">
         <p id="title"><strong>User Name here</strong></p>
         <p><span id="img"></span></p>
         <p><span id="location"></span></p>
-
+        <p><span id="bio"></span></p>
     </div>
+
+    <div id="tooltip_repo" class="tooltip hidden">
+        <p id="title"><strong>Repo Name here</strong></p>
+        <p><span id="lang"></span></p>
+        <p><span id="desc"></span></p>
+        <p><span id="url"></span></p>
+    </div>
+
 <script>
 
 var width = 1000,
@@ -111,6 +118,8 @@ d3.json("force_starred_language.json", function(json) {
 
     d3.select("#tooltip").classed('hidden', true);
     d3.select("#tooltip_user").classed('hidden', true);
+    d3.select("#tooltip_repo").classed('hidden', true);
+
 
 
     console.log(d);
@@ -141,12 +150,34 @@ d3.json("force_starred_language.json", function(json) {
         .classed("hidden", false);
 
     }
+
+    else if (d.type === 'repo') {
+        console.log('selected repo');
+        d3.select("#tooltip_repo")
+            .style("left", xPosition + "px")
+            .style("top", yPosition + "px")
+            .select("#title")
+            .html("<strong>" + d.id + "</strong>");
+
+        d3.select("#lang")
+            .text(d.lang);
+
+        d3.select("#desc")
+            .text(d.desc);
+
+        d3.select("#url")
+            .html("<p><a href='" + d.url + "'>" + d.url + "</a></p>");
+
+        d3.select("#tooltip_repo")
+            .classed("hidden", false);
+    }
+
     else {
         d3.select("#tooltip")
         .style("left", xPosition + "px")
         .style("top", yPosition + "px")
-        .select("#value")
-        .text(d.id);
+        .select("#title")
+        .html("<strong>" + d.id + "</strong>");
 
         //Show the tooltip
         d3.select("#tooltip").classed("hidden", false);
