--- a/views/index_template.html
+++ b/views/index_template.html
@@ -73,9 +73,14 @@
       <div id="myTabContent" class="tab-content">
 
         <div class="tab-pane fade in active" id="overview">
-          <p>This project explores network data from Github. What is github. Github as a social network. Diagram of possible interactions. Brief info about github API. </p>
+          <figure>
+            <img src="/img/github_interactions.png" width=700 />
+          <figcaption>Source: <a href="http://www.stanford.edu/class/cs224w/upload/cs224w-015-final.pdf">SAGH: Social Analysis Of Github</a></figcaption>
+	      </figure>
 
-	</div>
+          <p>This project explores network data from Github. What is github. Github as a social network. Diagram of possible interactions. Brief info about github API.</p>
+                    
+        </div>
 
 
 	<div class="tab-pane fade" id="hypothesis">
@@ -92,17 +97,16 @@
 	</div> <!-- /.tab-pane -->
 
 	<div class="tab-pane fade" id="bad_vis">
-
-	  <a href="http://hashtagify.me/#grizzlies">Hashtagify</a><br><br>
-
+      <p>Source: <a href="http://www.nanex.net/FlashCrash/OngoingResearch.html">Nanex High Frequency Trading Research Group</a></p>
+      <p><iframe width="420" height="315" src="//www.youtube.com/embed/mTqPaHO7G1U" frameborder="0" allowfullscreen></iframe></p>
 
 	  <div class="panel panel-danger">
 	    <div class="panel-heading">
 	      <h3 class="panel-title">Why this is a bad visual</h3>
 	    </div>
 	    <div class="panel-body">
-	      <p>This visual seems to have a good map projection and dataset, but does a poor job of implementation. The legend gives no indication of the units used for population. At first, I thought the units were millions of people, however after some quick scrutiny that is clearly not the case. The use of circle overlays in itself is not bad, however the way this visual has moved the overlays aside to allow labeling is problematic. If the intent is to show population density, then keeping the circle overlays positioned geographically accurate is key. Moving them aside only distorts the data being displayed, while not adding much value to the labeling. Instead, the circles should have been kept centered over the city they represent with labeling done inside the circle when needed. A different scale for the circles might also be beneficial (a logarithmic scale perhaps?). These changes would have more clearly shown population density per geographic region.</p>
-	    </div>
+          <p>This visual shows quotes and trades across all exchanges for shares of The New York Times Company (NYSE: NYT) for a 50 millisecond period. The graphic is taken a bit out of context (this <a href="http://www.youtube.com/watch?v=mTqPaHO7G1U">page</a> contains additional commentary) but the point of the visual is to demonstrate that a great amount of bidding/trading occurs in New York (where the exchanges are located) in the amount of time that is takes (according to the speed of light) for information to reach Los Angeles. This is interesting, however the visual misses the opportunity to help the viewer visualize this geographically.</p>
+        </div>
 	  </div>
 
 	</div>
@@ -110,19 +114,14 @@
 
 	<div class="tab-pane fade" id="good_vis">
 	  
-      <br>Source: <a href="http://ramblings.mcpher.com/Home/excelquirks/gassites/d3nodefocus">Blog post on xLiberation</a>
-     <iframe title="force directed node focus for this site" width="100%" height="900" scrolling="auto" frameborder="0" id="2091775485" name="2091775485" allowtransparency="true" class="igm" src="//mj89sp3sau2k7lj1eg3k40hkeppguj6j-a-sites-opensocial.googleusercontent.com/gadgets/ifr?url=http://www.gstatic.com/sites-gadgets/iframe/iframe.xml&amp;container=enterprise&amp;view=default&amp;lang=en&amp;country=ALL&amp;sanitize=0&amp;v=4c7b07266c88c5b4&amp;libs=core:dynamic-height&amp;mid=204&amp;parent=http://ramblings.mcpher.com/Home/excelquirks/gassites/d3nodefocus#up_scroll=auto&amp;up_iframeURL=http://xliberation.com/googlecharts/d3nodefocustagsite.html&amp;st=e%3DAIHE3cBjahSnDfIa%252B0i0x%252F1JAepL4zfmh%252Bv%252B31azqPt452RDQUdthL5gT1WsRVzOe1%252Bd5UE9Yuzd5NKSQr5QP1s1WuQVTTx2pZSpTd5CCQlAx9PoA0Km1zfx0oRt7wcQIGkNmtiAEox3%26c%3Denterprise&amp;rpctoken=-3205715576345604868"></iframe> 
+      <br>Source: <a href="http://bost.ocks.org/mike/hive/" target="_blank">Hive Plot Software Dependency Example</a> (will open in new tab/window)
 	  <div class="panel panel-success">
 	    <div class="panel-heading">
-	      <h3 class="panel-title">Why these are good visuals</h3>
+	      <h3 class="panel-title">Why this is a good visual</h3>
 	    </div>
 	    <div class="panel-body">
-	     <h4>Wealth and Health of Nations</h4>
-	      <p>These contrast the bad visual example to show how circle overlays can be used effectively. A small amount of interaction resolves the problem of labeling. Animation is used to introduce the dimension of time to the visualizations. The Gapminder visualization contains a stunning number of indicators that can be visualized, resulting in a great exploratory visual analysis tool. </p>
-
-	    <h4>Airport example</h4>
-	      <p>Again shows circle overlays used effectively, contrasting with the poor implementation of circle overlays in the Bad Visual example.  This visual also shows how the technique of a hidden Voronoi overlay works for selecting an observation on mouseover. This technique, especially effective for small observation points on a circle overlay, is commonly used in D3 visuals to add an interactive component.</p>
-	    </div>
+	      <p>This is an example of a Hive Plot, a type of network data visualization that groups notes by type. Contrasted with a force directed layout, this method of assigning position to nodes, allows for information to be encoded in the x,y coordinates of the node.</p>
+        </div>
 	  </div>
 
 	</div> <!-- /.tab-pane -->
@@ -159,19 +158,21 @@
 	  <h3>Github users and their starred repositories</h3>
 	   Source: <a href="http://developer.github.com/v3">Githup API v3</a>
 
-       <p><a href="/star_repo" target="_blank">Top 15 Github contributors (will open in new tab/window)</a></p>
+       
 	  <p><iframe style="border: 0px;" src="/star_repo_personal" height="800" width="1000" scrolling="yes"></iframe></p>
 	  <div class="panel panel-primary">
 	    <div class="panel-heading">
 	      <h3 class="panel-title">About Visual #2</h3>
 	    </div>
 	    <div class="panel-body">
+          <h4>Alternate Visual</h4>
+          <p><a href="/star_repo" target="_blank">Top 15 Github contributors (will open in new tab/window)</a> <br> This visual uses similar data as the visual embedded above, however it examines the Github accounts of the top 15 Github contributors during the past 12 months.</p>
 	      <h4>Dataset</h4>
-          <p>Traversal of my github social network (friends / followers). Starred repos. Uses github API.</p>
+          <p>The visual displayed above uses data from the traversal of my Github social network (friends and followers). A node is created for each friend or follower. For each user node, additional nodes are created for each starred repository, with an edge from the repository node to the user node of the user who starred that repository. Repository nodes with more than one edge show that multiple users have starred the same repository. The Alternate Visual linked to above uses similar data, but rather than a traversal of my Github social network, relies on data from the top Github contributors.</p>
           <h4>About Visual</h4>
-          <p>Created with D3 force directed layout. Exploratory. Other implementation details.</p>
+          <p>This visual was creating using D3 Javascript library. It uses a force directed layout to position each node. The forces being simulated are a repulsive charge (all nodes) and an attractive force between connected nodes. This results in nodes with similar edges being grouped together on the graph and nodes with dissimilar connections being pused away to the edges of the visual. reated with D3 force directed layout. Additional information about each node is available by clicking on the node.</p>
 	      <h4>Analysis</h4>
-          <p>Ego-like graphs with few nodes sharing multiple edges.</p>
+          <p>This visual shows Ego-like graphs with few nodes sharing multiple edges.</p>
 	  </div>
 	  </div> 
 
@@ -181,9 +182,8 @@
 	  <h3>Github users and their starred repositories, by language</h3>
       Source: <a href="http://developer.github.com/v3">Githup API v3</a>
       
-      <p>Personal network<iframe style="border: 0px;" src="/star_lang_personal" height="700" width="1000" scrolling="yes"></iframe></p> 
       <br>
-      <p>Top 20 Github contributors<iframe style="border: 0px;" src="/star_lang" height="700" width="1000" scrolling="yes"></iframe></p>
+      <p>Top 20 Github contributors<br><iframe style="border: 1px;" src="/star_lang" height="700" width="1000" scrolling="yes"></iframe></p>
 
       
       <div class="panel panel-primary">
@@ -193,9 +193,9 @@
 	    <div class="panel-body">
 
 		<h4>Dataset</h4>
-        <p>Same data as Viz 2, but broken up by language. </p>
+        <p>This visual uses the same data as shown in Visual #2, however instead of plotting a node for each repository a node is plotted for the <strong>language</strong> in which the starred repository is written. Nodes with multiple edges therefore show multiple users who have a starred one or more repositories in that language. </p>
 		<h4>Analysis</h4>
-	    <p>Appear to be two classes of languages: common language with edges to many user nodes, and many uncommon langues with few edges.</p>  
+	    <p>An interesting characteristic that appears in both visuals presented above is the apparent distinction of two classes of languages. In the center of the graph are common language nodes (Java, C, Python, Javascript, etc) that more users appear to be interested in. On the outer regions of the graph are more esoteric languages (LiveScript, F#, TypeScript, OCaml, etc) that are used by one or only a few users. This is  Appear to be two classes of languages: common language with edges to many user nodes, and many uncommon langues with few edges.</p>  
       </div>
 	  </div>
 
@@ -204,9 +204,11 @@
 	<div class="tab-pane fade" id="vis_4">
 	   <h3>Github users and their owned repositories, by language</h3>
         Source: <a href="http://developer.github.com/v3">Githup API v3</a>
-	    <p>Personal network<iframe style="border: 0px;" src="/own_lang_personal" height="700" width="1000" scrolling="yes"></iframe></p> 
+	    <p>Personal network
+        <br><iframe style="border: 1px;" src="/own_lang_personal" height="700" width="1000" scrolling="yes"></iframe></p> 
       <br>
-      <p>Top 20 Github contributors<iframe style="border: 0px;" src="/own_lang" height="700" width="1000" scrolling="yes"></iframe></p>
+      <p>Top 20 Github contributors
+      <br><iframe style="border: 1px;" src="/own_lang" height="700" width="1000" scrolling="yes"></iframe></p>
 
 	  <div class="panel panel-primary">
 	    <div class="panel-heading">
@@ -230,8 +232,33 @@
 	<div class="tab-pane fade" id="analysis">
 	   <h3>Analysis And Conclusions</h3>
        <h4>Power Law Analysis</h4>
+       <p>A power law function expresses the value of a variable in terms of the power (exponent) of another variable. In this case we explore the power law relationship of the distribution of degree of the nodes in our graph. In other words, we look for evidence that the frequency of the number of edges per node follows a power law.  </p>
         <h5>Plots</h5>
-        <p>Plots showing log/log frequency of edges</p>
+        <figure>
+         <img src="/img/freq.png" width=500/>
+          <figcaption>This frequency plot shows that most nodes have only 1 edge, while only a small number of nodes have many edges.</figcaption>
+        </figure>
+
+        <p><table border="1" style="float: right;">
+          <caption>Regression Analysis: log(Number Edges) vs log(Frequency)</caption>
+          <tr><th colspan=2>Regression Summary Stats</th></tr>
+		  <tr>
+		    <td><b>p-value:</b></td>
+		    <td>0.0003</td>
+		  </tr>
+		  <tr>
+		    <td><b>r^2:</b></td>
+		    <td>0.5867</td>
+		  </tr>
+		  <tr>
+		    <td><b>Slope: </b></td>
+		    <td>-0.7604</td>
+		  </tr>
+		  <tr>
+		    <td><b>Intercept: </b></td>
+		    <td>4.6761</td>
+		  </tr>
+	      </table>
         <h5>Conclusions</h5>
         <p>What is the power law exponent? Does the distribution make sense?</p>
       <h4>Conclusions</h4>
